<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20px"
            android:paddingTop="10px"
            android:textSize="24px"
            android:textColor="@color/light_blue"
            android:text="@string/manage_goals_header"/>

    <TextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20px"
            android:paddingTop="10px"
            android:textSize="12px"
            android:textColor="@color/pale"
            android:text="@string/manage_goals_instruction"/>

    <ListView android:id="@+id/android:list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_goals"
            />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_goal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_goal"/>

        <Button
            android:id="@+id/edit_goal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_toRightOf="@id/add_goal_button"
            android:visibility="invisible"
            android:text="@string/edit_goal"/>

        <Button
            android:id="@+id/delete_goal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_toRightOf="@id/edit_goal_button"
            android:visibility="invisible"
            android:text="@string/delete_goal"/>

	</RelativeLayout>



</LinearLayout>